--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
+VSCode Cache
+.vscode/
+
+Rider Cache
+.idea/
