--- a/BeginnerCSharp/HW7/HomeWork7/Task3/Task3.csproj
+++ b/BeginnerCSharp/HW7/HomeWork7/Task3/Task3.csproj
@@ -5,4 +5,9 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
