--- a/BeginnerCSharp/HW8/HomeWork8/Task1/Task1.csproj
+++ b/BeginnerCSharp/HW8/HomeWork8/Task1/Task1.csproj
@@ -3,6 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageVersion>0.1.0</PackageVersion>
+        <Description>Says welcome to user and save he or she information to configuration</Description>
+        <Copyright>MIT</Copyright>
+        <Company>Thundire</Company>
+        <AssemblyVersion>0.1.0</AssemblyVersion>
+        <FileVersion>0.1.0</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
