--- a/Algoritms/HomeWork4/Task1/Task1.csproj
+++ b/Algoritms/HomeWork4/Task1/Task1.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+      <PackageReference Include="Lorem.Universal.NET" Version="4.0.80" />
     </ItemGroup>
 
 </Project>
